Add border ,colors

--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
     <title>Time</title>
 </head>
 <body>
-    <div id="clock"></div>
-    <br>
-    <div id="date"></div>
+    <div id="container">
+        <div id="clock"></div>
+        <br>
+        <div id="date"></div>
+    </div>
     <script src="date.js"></script>
 </body>
 </html>
